--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Dyslistgerman by Rauschii</title>
+    <title>DysMusic: Musical Elements by Rauschii (Jan 2017) </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Dyslistgerman</h1>
-      <h2 class="project-tagline">Written Errors, Errors, Dyslexia, Visual, Phonetics, Resource, German</h2>
+      <h1 class="project-name">DysMusic: Musical Elements</h1>
+      <h2 class="project-tagline">Perception of Musical Elements, Dyslexia, Detection, Pre-Readers, Serious Games, Gamification, Web-base Assessment</h2>
       <!--  <a href="https://github.com/Rauschii/DysListGerman" class="btn">View on GitHub</a> --> 
       <a href="https://github.com/Rauschii/DysListGerman/blob/gh-pages/German_Annotation_V027_final.zip?raw=true" class="btn">Download .zip</a>
      <!-- <a href="https://github.com/Rauschii/DysListGerman/tarball/master" class="btn">Download .tar.gz</a> --> 
@@ -22,7 +22,9 @@
       <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description.</h3>
 
-<p>DysList, a list of dyslexic errors annotated with linguistic, phonetic and visual features. Presented 2016 at the LREC conference: Rauschenberger, Maria; Rello, Luz; Füchse, Silke &amp; Thomaschewski, Jörg. 2016.  A Language Resource of German Errors Written by Children with Dyslexia. [In Press] Proc. LREC 2016. Portorož (Slovenia), 23-28, May. </p>
+<p>
+Dyslexia is a reading disorder which is mostly detected bylinguistic features and/or bad grades at school.  Therefore,our  goal  is  to  design  a  game  to  predict  the  risk  of  hav-ing  dyslexia  with  musical  and  visual  elements.   Hence,  wepresent the gameDysMusicwhich aims to predict the riskof having dyslexia with musical elements.  The advantagesof DysMusic are that the game is language independent andfor  pre-readers.DysMusicwas  designed  with  the  help  offive children and five parents who tested the game using thethink aloud protocol and being observed while playing
+ </p>
 
 <h3>
 <a id="abstract-out-of-the-paper-from-the-lrec-conference" class="anchor" href="#abstract-out-of-the-paper-from-the-lrec-conference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Abstract out of the paper from the LREC Conference</h3>
