--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">DysMusic: Musical Elements</h1>
       <h2 class="project-tagline">Perception of Musical Elements, Dyslexia, Detection, Pre-Readers, Serious Games, Gamification, Web-base Assessment</h2>
       <!--  <a href="https://github.com/Rauschii/DysListGerman" class="btn">View on GitHub</a> --> 
-      <a href="https://github.com/Rauschii/DysListGerman/blob/gh-pages/German_Annotation_V027_final.zip?raw=true" class="btn">Download .zip</a>
+      <a href="https://github.com/Rauschii/DysMusicMusicalElements/blob/gh-pages/DysMusic_MusicalSounds_Jan2017.zip" class="btn">Download .zip</a>
      <!-- <a href="https://github.com/Rauschii/DysListGerman/tarball/master" class="btn">Download .tar.gz</a> --> 
     </section>
 
@@ -23,7 +23,7 @@
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description.</h3>
 
 <p>
-Dyslexia is a reading disorder which is mostly detected by linguistic features and/or bad grades at school. Therefore, our goal  is  to  design  a  game  to  predict  the  risk  of  having  dyslexia  with  musical  and  visual  elements.   Hence,  we present the game <b>DysMusic</b> which aims to predict the risk of having dyslexia with musical elements.  The advantages of <b>DysMusic</b> are that the game is language independent and for  pre-readers. DysMusic was  designed  with  the  help  offive children and five parents who tested the game using the think aloud protocol and being observed while playing.
+DysMusic aims to detect if a child aged 3 to 6 years has dyslexia. This are the musical elements which are used for the first user test. 
  </p>
 
 <h3>
