--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ DysMusic aims to detect if a child aged 3 to 6 years has dyslexia. This are the 
 <a id="abstract-out-of-the-paper-from-the-lrec-conference" class="anchor" href="#abstract-out-of-the-paper-from-the-lrec-conference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Abstract out of the paper which was submitted to W4A 2017 </h3>
 
 <p>"Dyslexia is a reading disorder which is mostly detected by linguistic features and/or bad grades at school. Therefore, our goal  is  to  design  a  game  to  predict  the  risk  of  having  dyslexia  with  musical  and  visual  elements.   Hence,  we present the game <b>DysMusic</b> which aims to predict the risk of having dyslexia with musical elements.  The advantages of <b>DysMusic</b> are that the game is language independent and for  pre-readers. DysMusic was  designed  with  the  help  offive children and five parents who tested the game using the think aloud protocol and being observed while playing."</p>
-<p> This music content can be cited with the DOI 10.5281/zenodo.809783.</p>
+<p> This music content must be cited with the DOI 10.5281/zenodo.809783 .</p>
 
 <p><a href="https://github.com/Rauschii/DysMusicMusicalElements/blob/gh-pages/DysMusic_MusicalSounds_Jan2017.zip">Resource Download</a></p>
 
